[[bin]]
name = "portus"
test = false
bench = false

[package]
name = "portus"
version = "0.1.0"
authors = ["Amin Saedi <amindisam@gmail.com>"]
license = "MIT"
description = "Simple command to wait for a TCP port to open"
readme = "README.md"
homepage = "https://github.com/aminsaedi/portus"
repository = "https://github.com/aminsaedi/portus"
keywords = ["port wait", "port", "tcp"]
categories = ["command-line-utilities"]
